--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="d_buttons" id="btns">
             <button onclick="seed_random()" id="btn1">隨機產生細胞</button>
             <button onclick="seed_gun()" id="btn2">Goseper <br> Glider Gun</button>
-            <button id="btn3"></button>
+            <button onclick="seed_puslar()" id="btn3">Pulsar</button>
             <button id="btn4"></button>
         </div>
         <div class="operate">操作</div>
@@ -28,6 +28,10 @@
             <button onclick="pass()" id="pass">暫停</button>
             <button onclick="restart()" id="restart">重新開始</button>
         </div>
+        <!-- <div class="setting">設定</div>
+        <div class="slider_container">
+            <input type="range">
+        </div> -->
 
     </div>
 </body>
